--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Logging setting
 logging.level.org.hibernate=info
+logging.level.root=INFO
+
 
 # Security log level
 logging.level.org.springframework.security=debug
