데이터베이

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ spring.devtools.livereload.enabled=true
 
 # DataSource setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@rncr6eqzecdvuc5l_medium?TNS_ADMIN=/Users/jiw0._0/Downloads/Wallet_RNCR6EQZECDVUC5L
-spring.datasource.username=admin
-spring.datasource.password=dkstksdjfWKddlwldn123
+spring.datasource.url=jdbc:oracle:thin:@(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.ap-chuncheon-1.oraclecloud.com))(connect_data=(service_name=g3dda3408c1dce5_b1l3_high.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))
+spring.datasource.username=B1L3
+spring.datasource.password=Qordldldl123
 
 # JPA setting
 spring.jpa.hibernate.ddl-auto=update
