--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.username=B1L3
 spring.datasource.password=Qordldldl123
 
 # JPA setting
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
