--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.11.2</version>
 		</dependency>
+		
+		<!--JSON 데이터 Parser -->
+      <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
 
 
 		<dependency>
