--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,8 +47,8 @@ spring.jwt.refresh.header=Authorization-refresh
 # Mail Setting
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=bh7885@gmail.com
-spring.mail.password=uhmv omhz qujl jvpo
+spring.mail.username=dlwldn2424@gmail.com
+spring.mail.password=azjp btuw wunh clez
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
@@ -93,3 +93,4 @@ spring.security.oauth2.provider.kakao.token-uri=https://kauth.kakao.com/oauth/to
 spring.security.oauth2.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 spring.security.oauth2.provider.kakao.user-name-attribute=id 
 
+career.net.api.key=92a66e624117c92a3fd4ee8379ee5a00
