--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -93,4 +93,4 @@ spring.security.oauth2.provider.kakao.token-uri=https://kauth.kakao.com/oauth/to
 spring.security.oauth2.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 spring.security.oauth2.provider.kakao.user-name-attribute=id 
 
-career.net.api.key=92a66e624117c92a3fd4ee8379ee5a00
+career.api.key=92a66e624117c92a3fd4ee8379ee5a00
