17일 지우 커밋

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,7 +48,7 @@ spring.jwt.refresh.header=Authorization-refresh
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=dlwldn2424@gmail.com
-spring.mail.password=azjp btuw wunh clez
+spring.mail.password=serb lnli gwhs bbpx
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
